removed unnecessary logs

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,11 +20,9 @@
            <input placeholder="location">
            <button>Search</button> 
         </form>
-        <P id="message-1">
-        </P>
-        <p id="message-2">
+        <P id="message-1"> </P>
 
-        </p>
+        <p id="message-2"> </p>
     </div>
     {{>footer}}
 
